WebShop.API/src/main/java/com/example/webshopapi/error/exception/InvalidSubscriptionException.java
package com.example.webshopapi.error.exception;

public class InvalidSubscriptionException extends RuntimeException {
    public InvalidSubscriptionException(String message) {
        super(message);
    }
}
